--- a/kubernetes/shopfront-service.yaml
+++ b/kubernetes/shopfront-service.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: v1
-kind: Service
+kind: Service 
 metadata:
   name: shopfront
   labels:
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
       - name: shopfront
-        image: thetips4you/shopfront:latest
+        image: sanketmogal/shopfront:latest
         ports:
         - containerPort: 8010
         livenessProbe:
